modifying font size and button sizes to prevent overflow of grid

--- a/client/app/game-board/game-board.module.css
+++ b/client/app/game-board/game-board.module.css
@@ -13,7 +13,7 @@
   }
 
   .page .firstrow {
-    font-size: 10px;
+    font-size: 0.75rem;
   }
 
   .page .nextRoundButton {
@@ -84,7 +84,7 @@
 
 .button {
   flex: 1;
-  margin: 10px;
+  margin: 0 5px;
   color: rgb(238, 196, 78);
   background-color: rgb(7, 18, 119);
   font-size: 1.5rem;
@@ -95,18 +95,22 @@
   cursor: pointer;
   transition: transform 0.3s ease;
   width: 100%;
+  height: 95%;
 }
 
 .firstbuttonrow,
 .buttonrow {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   width: 100%;
 }
 
 .firstrow {
   width: 100%;
-  margin: 10px;
+  height: 95%;
+  margin: 0 5px;
+  font-size: 1rem;
   color: rgb(255, 255, 255);
   background-color: rgb(7, 18, 119);
   display: flex;
